refactor(test): modernize stream collectors in BaseVectorStoreTests